--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,64 @@
+html {
+    background-color: #FFE297;
+    font-family: 'Josefin Sans', sans-serif;
+
+}
+
+h1 {
+    font-family: 'Life Savers', cursive;
+    font-weight: 800;
+    font-size: 40px;
+    margin: 1em;
+}
+
+h2 {
+    font-family: 'Life Savers', cursive;
+    margin: 0;
+}
+
 #onboarding {
     display: flex;
     justify-content: space-around;
     background-color: #FFE297;
-
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
-#onboarding p {
-    border: 2px solid black;
-    padding: 0.5em 2em;
+img {
+    max-width: 50%;
+    max-height: 40%;
+    margin-top: 2em;
 }
 
 #loginForm {
-    margin: 10em;
+    margin: 8em;
     padding: 2em;
-    border: 2px black solid;
+    background-color: white;
     border-radius: 10px;
 }
 
 #loginInput {
     display: flex;
     flex-direction: column;
+    margin: 1em 1em 1em 0;
 }
 
-label {
-    margin: 0.5em 0;
+#loginInput label{
+    margin: 0.2em 0;
+    font-family: 'Life Savers', cursive;
 }
 
 #loginInput button {
-    margin-top: 0.5em;
+    margin: 2em 0;
+    font-family: 'Life Savers', cursive;
 }
 
+#guest {
+    display: flex;
+    flex-direction: column;
+}
+
+#guest button {
+    margin: 0.3em 0;
+    font-family: 'Life Savers', cursive;
+}
