--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,29 @@
+* {
+    font-family: 'Lato', sans-serif;
+}
+
 html {
     background-color: #FFE297;
-    font-family: 'Josefin Sans', sans-serif;
+}
 
+h1, h2 {
+    font-family: 'Life Savers', cursive;
 }
 
 h1 {
-    font-family: 'Life Savers', cursive;
     font-weight: 800;
     font-size: 40px;
-    margin: 1em;
+    margin: 1.5em 1em 1em 3em;
 }
 
 h2 {
-    font-family: 'Life Savers', cursive;
-    margin: 0;
+    margin: 0 1em 0.3em 0;
+    font-size: 30px;
 }
 
 #onboarding {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     background-color: #FFE297;
     max-width: 100vw;
     max-height: 100vh;
@@ -27,38 +32,63 @@ h2 {
 img {
     max-width: 50%;
     max-height: 40%;
-    margin-top: 2em;
+    margin: 3em 7em 0 1em;
 }
 
 #loginForm {
-    margin: 8em;
-    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    margin: 1em;
+    padding: 3em;
+    width: 30%;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 #loginInput {
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
     margin: 1em 1em 1em 0;
 }
 
-#loginInput label{
-    margin: 0.2em 0;
-    font-family: 'Life Savers', cursive;
+#loginInput input {
+    width: 80%;
+    border: black 1px solid;
+    border-radius: 15px;
+    margin: 0.2em;
+    padding: 0.4em 1.5em;
 }
 
 #loginInput button {
-    margin: 2em 0;
-    font-family: 'Life Savers', cursive;
+    margin-top: 1em;
+    padding: 0.2em 1em;
+    max-width: 30%;
+    background-color: #438EFF;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    box-shadow: black 5px 5px;
 }
 
 #guest {
     display: flex;
     flex-direction: column;
+    justify-content: left;
+}
+
+#guest p {
+    font-size: 15px;
 }
 
 #guest button {
-    margin: 0.3em 0;
-    font-family: 'Life Savers', cursive;
+    margin: 0.4em 0;
+    justify-content: left;
+    padding: 0.3em 0.3em;
+    max-width: 60%;
+    text-align: center;
+    background-color: white;
+    border: black solid 1px;
+    border-radius: 15px;
+    box-shadow: black 5px 5px;
 }
