--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1, h2 {
 h1 {
     font-weight: 800;
     font-size: 40px;
-    margin: 1.5em 1em 1em 3em;
+    /* margin: auto; */
 }
 
 h2 {
@@ -23,22 +23,32 @@ h2 {
 
 #onboarding {
     display: flex;
+    display: row;
     justify-content: center;
+    margin-top: 3em;
     background-color: #FFE297;
     max-width: 100vw;
     max-height: 100vh;
 }
 
+#leftHalf {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 3em;
+}
+
 img {
-    max-width: 50%;
-    max-height: 40%;
-    margin: 3em 7em 0 1em;
+    display: flex;
+    max-width: 90%;
+    max-height: 60%;
+    justify-content: center;
 }
 
 #loginForm {
     display: flex;
     flex-direction: column;
-    margin: 1em;
+    margin: 1em 1em 1em 4em;
     padding: 3em;
     width: 30%;
     background-color: white;
