--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    background-color: #FFE297;
+    background-color: #B1D0FF;
 }
 
 h1, h2 {
@@ -27,7 +27,7 @@ h2 {
     display: row;
     justify-content: center;
     margin-top: 3em;
-    background-color: #FFE297;
+    background-color: #B1D0FF;
     max-width: 100vw;
     max-height: 100vh;
 }
@@ -66,7 +66,7 @@ img {
 #loginInput input {
     width: 80%;
     border: black 1px solid;
-    border-radius: 15px;
+    border-radius: 10px;
     margin: 0.2em;
     padding: 0.4em 1.5em;
 }
@@ -78,7 +78,7 @@ img {
     background-color: #438EFF;
     color: white;
     border: none;
-    border-radius: 15px;
+    border-radius: 8px;
     box-shadow: black 5px 5px;
 }
 
@@ -100,7 +100,7 @@ img {
     text-align: center;
     background-color: white;
     border: black solid 1px;
-    border-radius: 15px;
+    border-radius: 10px;
     box-shadow: black 5px 5px;
 }
 
