--- a/begingame.css
+++ b/begingame.css
@@ -32,3 +32,37 @@
     background-color: #B1D0FF;
     font-size: 18px;
 }
+
+#startBtn {
+    display: flex;
+    justify-content: space-around;
+}
+
+#startBtn button {
+    margin: 0.5em;
+    padding: 0.5em 1em;
+    max-width: 30%;
+    align-items: right;
+    background-color: rgb(255, 113, 113);
+    border: none;
+    border-radius: 15px;
+    box-shadow: black 5px 5px;
+    font-size: 20px;
+}
+
+#startBtn button:hover{
+    margin: 0.5em;
+    padding: 0.5em 1em;
+    max-width: 30%;
+    align-items: right;
+    background-color: white;
+    border: none;
+    border-radius: 15px;
+    box-shadow: black 5px 5px;
+    font-size: 20px;
+}
+
+#startBtn button a {
+    text-decoration: none;
+    color: black;
+}
