--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,38 @@ section.sectionStyle {
 .hidden {
     display: none;
 }
+
+/* user test styling */
+#userTestBtn button{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1em;
+    padding: 0.5em 1em;
+    max-width: 100%;
+    background-color: rgb(255, 77, 106);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    box-shadow: black 5px 5px;
+    font-size: 25px;
+}
+
+#overlay {
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 50vw;
+    height: 50vh;
+    transform: translate(50%, 50%);
+    border-radius: 30px;
+    border: rgb(255, 234, 47) 10px solid;
+}
+
+#content {
+    padding: 2em;
+}
+
+.show {
+    display: block;
+}
