--- a/board.css
+++ b/board.css
@@ -1,3 +1,16 @@
+/*  universal CSS*/
+* {
+    font-family: 'Lato', sans-serif;
+}
+
+html {
+    background-color: #B1D0FF;
+}
+
+h1, h2 {
+    font-family: 'Life Savers', cursive;
+}
+
 /* 5 rows x 8 columns */
 #board-container {
     display: grid;
@@ -30,39 +43,68 @@
 
 .cell {
     border: solid black 1px;
-    height: 4rem;
-    width: 4rem;
+    height: 8rem;
+    width: 8rem;
 }
 
 .play-container {
     background-color: #F6DBC8;
     border: solid #9A694E 1px;
     border-radius: 0.25rem;
-    height: 10rem;
+    height: 90%;
     width: 80%;
 }
 
 .roll-container {
     width: 100%;
-    height: 10rem;
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
 .question-container {
-    padding: 1rem;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.question-display {
+    margin-left: 4rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.question-item {
+    margin-bottom: 1.25rem;
+}
+
+.answer-item {
+    margin-bottom: 0.75rem;
 }
 
 button {
     background-color: #393939;
     color: white;
+    cursor: pointer;
     border-radius: 5px;
-    font-size: 0.5rem;
-    padding: 0.25rem 0.6rem;
+    font-size: 1rem;
+    padding: 0.6rem 1rem;
+}
+
+.dice-img {
+    width: 10rem;
+    height: 10rem;
 }
 
 .bike-img {
     position: absolute;
-    width: 3rem;
+    width: 4rem;
+    transition: all .5s ease-in-out;
+}
+
+.hidden {
+    display: none;
 }
