--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ section.sectionStyle {
 
 /* user test & overlay styling */
 #userTestBtn button{
-    display: flex;
+    /* display: flex; */
     justify-content: space-around;
     margin-top: 1em;
     padding: 0.5em 1em;
