--- a/board.css
+++ b/board.css
@@ -42,6 +42,7 @@ h1, h2 {
 }
 
 .cell {
+    background-color: white;
     border: solid black 1px;
     height: 8rem;
     width: 8rem;
@@ -112,4 +113,9 @@ button {
 
 .hidden {
     display: none;
+}
+
+/* CSS for first cell */
+.first-cell {
+
 }
