Fix screen size

--- a/board.css
+++ b/board.css
@@ -17,6 +17,12 @@ h1 {
     margin: 1rem;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .game-container {
     display: flex;
     flex-direction: column;
