Minor fix for last final page

--- a/board/board.css
+++ b/board/board.css
@@ -214,4 +214,9 @@ button {
 	background-size: 3rem;
 }
 
-
+.final-result {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
