--- a/board/board.css
+++ b/board/board.css
@@ -89,6 +89,12 @@ body {
     width: 45%;
 }
 
+.dice-img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .question-container {
     width: 100%;
     height: 100%;
