images added, contents changed

--- a/board/board.css
+++ b/board/board.css
@@ -1,6 +1,6 @@
 /*  universal CSS*/
 * {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Mali', cursive;
 }
 
 html {
@@ -9,7 +9,7 @@ html {
 }
 
 h1, h2 {
-    font-family: 'Life Savers', cursive;
+    font-family: 'Mali', cursive;
 }
 
 h1 {
