--- a/board/board.css
+++ b/board/board.css
@@ -102,15 +102,16 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 0;
 }
 
 .question-display {
     display: flex;
+    flex: 2;
     flex-direction: column;
-    margin: 2rem;
+    margin: 2rem auto auto auto;
     width: 30%;
 }
 
@@ -125,9 +126,10 @@ body {
 }
 
 .roll-result-container {
-    width: 20%;
+    width: 30%;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 .question-item {
