--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h2 {
 body {
     height: 100vh;
     width: 100vw;
+    margin: 0;
 }
 
 /* cursor pointer */
@@ -80,10 +81,6 @@ button#playNow {
 }
 
 /* all sections style */
-section.sectionStyle {
-    margin: 1em;
-}
-
 .fa-arrow-left {
     font-size: 40px;
     margin: 1em 1em;
@@ -240,6 +237,7 @@ input.teamname {
     border-radius: 5px;
     border: none;
     box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.157);
+    padding-left: 0.75rem;
 }
 
 .color-square {
