--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h1 {
 
 h2 {
     margin: 1.5em 1em 0.3em 0;
-    font-size: 30px;
+    font-size: 3rem;
 }
 
 body {
@@ -110,20 +110,21 @@ button#playNow {
 
 #rules {
     position: absolute;
+    display: none;
     background-color: rgb(255, 237, 207);
     top: 0;
     left: 0;
-    width: 98.5vw;
-    height: 97vh;
-    border: rgb(255, 234, 47) 10px solid;
+    width: 100%;
+    height: 100%;
     z-index: 5;
 }
 
 #rulesContent {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: 90vw;
+    width: 80%;
 }
 
 #rulesContent h1 {
@@ -132,17 +133,17 @@ button#playNow {
 
 #rulesContent h4 {
     margin: 0;
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 #rulesContent ol li {
-    font-size: 18px;
+    font-size: 1.5rem;
     line-height: 1.5em;
 }
 
 #rulesContent p {
     margin: 0 0 1em 0;
-    font-size: 15px;
+    font-size: 1.5rem;
     color: red;
 }
 
@@ -161,7 +162,7 @@ button.ruleBtn {
     border: none;
     border-radius: 8px;
     box-shadow: black 5px 5px;
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 .ruleBtn:hover, .closeRule:hover, #playNow:hover {
@@ -178,7 +179,7 @@ button.ruleBtn {
     border: none;
     border-radius: 8px;
     box-shadow: black 5px 5px;
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 #fillNames {
@@ -238,6 +239,53 @@ input.teamname {
     border: none;
     box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.157);
     padding-left: 0.75rem;
+}
+
+#teamname-warning-container {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    padding-top: 25vh;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+#teamname-warning {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    color: red;
+    font-weight: bold;
+    font-size: 2em;
+    background-color: rgb(255, 237, 207);
+    margin: auto;
+    padding: 2rem;
+    border-radius: 15px;
+    width: 20em;
+    height: 5em;
+}
+
+#closeWarning {
+    margin: 1rem;
+    padding: 0.3em 0.5em;
+    background-color: rgb(255, 77, 106);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    box-shadow: black 5px 5px;
+    font-size: 1.5rem;
+}
+
+#closeWarning:hover {
+    background-color:  white;
+    color:  rgb(255, 77, 106);
 }
 
 .color-square {
