--- a/board/board.css
+++ b/board/board.css
@@ -74,8 +74,7 @@ body {
 }
 
 .play-container {
-    border: solid #B1D0FF 1px;
-    border-radius: 0.25rem;
+    border-radius: 1rem;
     height: 90%;
     width: 95%;
 }
@@ -102,17 +101,22 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 0;
+}
+
+.roll-result-container {
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
 .question-display {
+    margin: 0 2rem;
     display: flex;
-    flex: 2;
     flex-direction: column;
-    margin: 2rem auto auto auto;
-    width: 30%;
+    width: 55%;
 }
 
 .question-image {
@@ -123,13 +127,6 @@ body {
     width: 10rem;
     height: 10rem;
     border-radius: 10px;
-}
-
-.roll-result-container {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
 }
 
 .question-item {
@@ -208,10 +205,6 @@ button {
     position: absolute;
     width: 3rem;
     transition: all .5s ease-in-out;
-}
-
-.hidden {
-    display: none;
 }
 
 /* CSS for first cell */
