--- a/board/board.css
+++ b/board/board.css
@@ -21,6 +21,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
 }
 
 .game-container {
@@ -298,14 +301,15 @@ button {
 
 .final-result {
     background-image: url("../images/congrats.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 30px;
-    padding: 11rem 15rem;
+    height: 100%;
+    width: 100%;
 }
 
 .final-result h3 {
