--- a/board/board.css
+++ b/board/board.css
@@ -32,8 +32,8 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0 3em;
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 100%;
 }
 
 /* 5 rows x 8 columns */
@@ -109,7 +109,7 @@ body {
 }
 
 .roll-result-container {
-    width: 55%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -119,21 +119,11 @@ body {
     /* margin: 0 2rem; */
     display: flex;
     flex-direction: column;
-    width: 55%;
+    width: 60%;
 }
 
 .question-display button {
     margin: auto auto auto 0;
-}
-
-.question-image {
-    width: 20%;
-}
-
-.question-image > img {
-    width: 10rem;
-    height: 10rem;
-    border-radius: 10px;
 }
 
 .question-item {
