--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ input.teamname {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 #teamname-warning {
@@ -261,26 +261,26 @@ input.teamname {
     justify-content: center;
     align-items: center;
     opacity: 1;
-    color: red;
+    color: rgb(255, 77, 106);
     font-weight: bold;
     font-size: 2em;
     background-color: rgb(255, 237, 207);
     margin: auto;
-    padding: 2rem;
+    padding: 1rem 2rem;
     border-radius: 15px;
     width: 20em;
     height: 5em;
 }
 
 #closeWarning {
-    margin: 1rem;
+    margin: 1.5rem 1rem 0 1rem;
     padding: 0.3em 0.5em;
     background-color: rgb(255, 77, 106);
     color: white;
     border: none;
     border-radius: 8px;
     box-shadow: black 5px 5px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 
 #closeWarning:hover {
