color squares updated

--- a/styles.css
+++ b/styles.css
@@ -300,13 +300,13 @@ input.teamname {
 }
 
 .square-2 {
-    background-color: red;
+    background-color: #0004c2;
 }
 
 .square-3 {
-    background-color: blue;
+    background-color: #ff2222;
 }
 
 .square-4 {
-    background-color: green;
+    background-color: #ffd40b;
 }
